# dl-trader

./: .env  docker-compose.scheduler.yml  docker-compose.yml  requirements-ci.txt
gold-bot/: .env.example  .gitignore  README.md  pyproject.toml  requirements-ci.txt  requirements.txt
gold-bot/config/: __init__.py  search_space.yaml  settings.py
gold-bot/data/: mgc_5m.csv
gold-bot/docs/: app.js  index.html  styles.css
gold-bot/docs/data/: best_candidate.json  equity_curve.json  metrics.json  signals.json  status.json  trades.json  walkforward.json
gold-bot/src/gold_bot/: __init__.py  run_research.py  run_signals.py
gold-bot/src/gold_bot/backtest/: __init__.py  event_engine.py  metrics.py  vectorbt_runner.py
gold-bot/src/gold_bot/data/: __init__.py  adapter.py  alphavantage_adapter.py  cache.py  local.py  yfinance_adapter.py
gold-bot/src/gold_bot/features/: __init__.py  indicators.py
gold-bot/src/gold_bot/reporting/: __init__.py  export.py
gold-bot/src/gold_bot/risk/: __init__.py  manager.py  position_sizing.py  prop_rules.py
gold-bot/src/gold_bot/search/: __init__.py  gating.py  optimizer.py  orchestrator.py  walk_forward.py
gold-bot/src/gold_bot/signals/: __init__.py  generator.py  schema.py
gold-bot/src/gold_bot/strategies/: __init__.py  base.py  donchian_breakout.py  ema_cross.py  macd_trend.py  opening_range.py  registry.py  (+1 more)
gold-bot/tests/: conftest.py  test_alphavantage.py  test_data.py  test_event_engine.py  test_indicators.py  test_metrics.py  test_prop_rules.py  test_risk_manager.py  test_search.py  test_settings.py  test_strategies.py
(+52 files in other folders)
